--- a/src/Locale/es/fields.pot
+++ b/src/Locale/es/fields.pot
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2016-10-09 03:11+0000\n"
-"PO-Revision-Date: 2016-10-09 00:34-0300\n"
+"PO-Revision-Date: 2016-10-18 02:57-0300\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -14,6 +14,15 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.5.4\n"
 "Language: es\n"
+"Project-Id-Version: PROJECT VERSION\n"
+"POT-Creation-Date: 2016-10-18 05:33+0000\n"
+"PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
+"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 
 #: View/Helper/LocHelper.php:8
 msgid "(English version)"
@@ -58,3 +67,35 @@ msgstr "Código de acceso"
 #: View/Helper/LocHelper.php:42
 msgid "App Shortname"
 msgstr "Abreviación"
+
+#: View/Helper/LocHelper.php:47
+msgid "Project Name"
+msgstr "Nombre del Proyecto"
+
+#: View/Helper/LocHelper.php:48
+msgid "Project Description"
+msgstr "Descripción del Proyecto"
+
+#: View/Helper/LocHelper.php:49
+msgid "External URL"
+msgstr "URL Externa"
+
+#: View/Helper/LocHelper.php:50
+msgid "Organization Type"
+msgstr "Tipo de Organización"
+
+#: View/Helper/LocHelper.php:51
+msgid "Main country"
+msgstr "País Principal"
+
+#: View/Helper/LocHelper.php:52
+msgid "Project Stage"
+msgstr "Etapa del proyecto"
+
+#: View/Helper/LocHelper.php:53
+msgid "Start Date"
+msgstr "Fecha de Inicio"
+
+#: View/Helper/LocHelper.php:54
+msgid "Finish Date"
+msgstr "Fecha de Término"
