--- a/src/Locale/es/instances.pot
+++ b/src/Locale/es/instances.pot
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2016-10-09 03:11+0000\n"
-"PO-Revision-Date: 2016-10-09 00:44-0300\n"
+"PO-Revision-Date: 2016-10-18 02:57-0300\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -14,6 +14,15 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.5.4\n"
 "Language: es\n"
+"Project-Id-Version: PROJECT VERSION\n"
+"POT-Creation-Date: 2016-10-18 05:33+0000\n"
+"PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
+"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 
 #: Template/Instances/add.ctp:14
 msgid "Back to admin panel"
@@ -120,3 +129,7 @@ msgstr "Tipos de Organización relacionados"
 #: Template/Instances/view.ctp:165
 msgid "Admins"
 msgstr "Administradores"
+
+#: Template/Instances/view.ctp:165
+msgid "Actions"
+msgstr "Acciones"
