--- a/src/Locale/es/default.pot
+++ b/src/Locale/es/default.pot
@@ -4,6 +4,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
+"POT-Creation-Date: 2016-10-30 05:42+0000\n"
+"PO-Revision-Date: 2016-10-30 02:54-0300\n"
+"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2016-10-09 03:11+0000\n"
 "PO-Revision-Date: 2016-10-18 02:53-0300\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
@@ -31,6 +40,14 @@ msgstr ""
 #: Controller/UsersController.php:179;184;189;247;252;257
 msgid "{0}"
 msgstr "{0}"
+
+#: Controller/ContactController.php:23
+msgid "We will get back to you soon."
+msgstr "Te contactaremos pronto."
+
+#: Controller/ContactController.php:26
+msgid "There was a problem submitting your message"
+msgstr "Hubo un problema enviando tu mensaje"
 
 #: Controller/InstancesController.php:421
 msgid "The app has been saved."
@@ -133,17 +150,13 @@ msgstr "El proyecto ha sido eliminado."
 msgid "The project could not be deleted. Please, try again."
 msgstr "No se pudo eliminar el proyecto. Por favor, intente más tarde."
 
-#: Controller/UsersController.php:61
-msgid "Invalid username or password, try again"
-msgstr "Nombre de usuario o contraseña inválidos."
+#: Controller/UsersController.php:245
+msgid "There was an error. Please, try again."
+msgstr "Hubo un error. Por favor, intente más tarde."
 
 #: Controller/UsersController.php:89;210
 msgid "This user does not exists"
 msgstr "Tal usuario no existe"
-
-#: Controller/UsersController.php:142
-msgid "Passwords must match!"
-msgstr "Las contraseñas no coinciden!"
 
 #: Controller/UsersController.php:168
 msgid "Welcome "
@@ -153,10 +166,6 @@ msgstr "Bienvenido"
 msgid "User details has been saved."
 msgstr "Se han guardados los datos de usuario."
 
-#: Controller/UsersController.php:245
-msgid "There was an error. Please, try again."
-msgstr "Hubo un error. Por favor, intente más tarde."
-
 #: Controller/UsersController.php:286
 msgid "The user has been deleted."
 msgstr "El usuario ha sido eliminado."
@@ -164,6 +173,34 @@ msgstr "El usuario ha sido eliminado."
 #: Controller/UsersController.php:288
 msgid "The user could not be deleted. Please, try again."
 msgstr "No se pudo eliminar el usuario. Por favor, intente más tarde."
+
+#: Form/ContactForm.php:25
+msgid "A name is required"
+msgstr "Se requiere un nombre"
+
+#: Form/ContactForm.php:28
+msgid "A valid email address is required"
+msgstr "Se requiere una dirección de correo válida"
+
+#: Template/Contact/contact.ctp:7
+msgid "Contact Us"
+msgstr "Contáctanos"
+
+#: Template/Contact/contact.ctp:13
+msgid "Your Name"
+msgstr "Tu nombre"
+
+#: Template/Contact/contact.ctp:19
+msgid "Your email"
+msgstr "Tu correo"
+
+#: Template/Contact/contact.ctp:25
+msgid "Your message"
+msgstr "Tu mensaje"
+
+#: Template/Contact/contact.ctp:30
+msgid "Submit message"
+msgstr "Enviar mensaje"
 
 #: Template/Instances/add.ctp:84 Template/Instances/edit.ctp:92
 msgid "User Configurations:"
@@ -193,17 +230,13 @@ msgstr "Ir al mapa de la app."
 msgid "Go to app dots"
 msgstr "Ir a los gráficos de la app."
 
-#: Template/Instances/home.ctp:42
-msgid "Previous App"
-msgstr "App anterior"
+#: Template/Instances/home.ctp:38
+msgid "Your Apps"
+msgstr "Tus apps"
 
-#: Template/Instances/home.ctp:45
-msgid "Next App"
-msgstr "App siguiente"
-
-#: Template/Instances/home.ctp:98
-msgid "Current Slide"
-msgstr "App actual"
+#: Template/Instances/home.ctp:58
+msgid "You don't have any registered app."
+msgstr "No tienes apps registradas."
 
 #: Template/Instances/index.ctp:10
 msgid "Admin Panel"
@@ -243,6 +276,16 @@ msgstr "anterior"
 msgid "next"
 msgstr "siguiente"
 
+#: Template/Instances/index.ctp:58 Template/Instances/view.ctp:322
+#: Template/Projects/index.ctp:52
+msgid "Page"
+msgstr "Página"
+
+#: Template/Instances/index.ctp:58 Template/Instances/view.ctp:322
+#: Template/Projects/index.ctp:52
+msgid "of"
+msgstr "de"
+
 #: Template/Instances/index.ctp:60
 msgid "Admins: "
 msgstr "Administradores"
@@ -259,18 +302,6 @@ msgstr "Nombre de usuario"
 #: Template/Instances/index.ctp:73 Template/Instances/view.ctp:181;210;273
 msgid "View user data"
 msgstr "Ver datos de usuario"
-
-#: Template/Instances/map.ctp:75
-msgid "New Project"
-msgstr "Nuevo proyecto"
-
-#: Template/Instances/map.ctp:83
-msgid "Graph Visualization"
-msgstr "Ver gráficos"
-
-#: Template/Instances/map.ctp:96 Template/Projects/index.ctp:10
-msgid "Project List"
-msgstr "Lista de Proyectos"
 
 #: Template/Instances/preview.ctp:42
 msgid "map"
@@ -329,6 +360,10 @@ msgstr ""
 #: Template/Instances/view.ctp:159
 msgid "This app does not have any related Organization Type."
 msgstr "Esta aplicación no tiene tipos de organización relacionados."
+
+#: Template/Instances/view.ctp:170
+msgid "Download User List"
+msgstr "Descargar lista de usuarios"
 
 #: Template/Instances/view.ctp:186
 msgid "Revoke Sysadmin Privileges"
@@ -403,6 +438,10 @@ msgstr "Configuración:"
 msgid "For Users:"
 msgstr "Usuarios:"
 
+#: Template/Instances/view.ctp:337
+msgid "Enable Genre field?"
+msgstr ""
+
 #: Template/Instances/view.ctp:327;331;339;347;351;355;359;363;367;371;375;379;383
 msgid "Yes"
 msgstr "Si"
@@ -410,6 +449,62 @@ msgstr "Si"
 #: Template/Instances/view.ctp:327;331;339;347;351;355;359;363;367;371;375;379;383
 msgid "No"
 msgstr "No"
+
+#: Template/Instances/view.ctp:341
+msgid "Enable Main Organization field?"
+msgstr ""
+
+#: Template/Instances/view.ctp:346
+msgid "For Projects:"
+msgstr ""
+
+#: Template/Instances/view.ctp:349
+msgid "Enable Categories?"
+msgstr ""
+
+#: Template/Instances/view.ctp:353
+msgid "Max. Allowed Categories"
+msgstr ""
+
+#: Template/Instances/view.ctp:357
+msgid "Enable Organization Type field?"
+msgstr ""
+
+#: Template/Instances/view.ctp:361
+msgid "Enable Organization name field?"
+msgstr ""
+
+#: Template/Instances/view.ctp:365
+msgid "Enable Cities usage?"
+msgstr ""
+
+#: Template/Instances/view.ctp:369
+msgid "Enable exact location?"
+msgstr ""
+
+#: Template/Instances/view.ctp:373
+msgid "Enable Project Stage field?"
+msgstr ""
+
+#: Template/Instances/view.ctp:377
+msgid "Enable external URL field?"
+msgstr ""
+
+#: Template/Instances/view.ctp:381
+msgid "Enable Description field?"
+msgstr ""
+
+#: Template/Instances/view.ctp:385
+msgid "Enable Contribution field?"
+msgstr ""
+
+#: Template/Instances/view.ctp:389
+msgid "Enable Contributing field?"
+msgstr ""
+
+#: Template/Instances/view.ctp:393
+msgid "Enable start and finish dates?"
+msgstr ""
 
 #: Template/InstancesUsers/add.ctp:49 Template/InstancesUsers/edit.ctp:77
 #: View/Helper/LocHelper.php:15
@@ -423,6 +518,96 @@ msgstr "ej."
 #: Template/InstancesUsers/edit.ctp:74
 msgid "Save"
 msgstr "Guardar"
+
+#: Template/Layout/error.ctp:20
+msgid "Home"
+msgstr "Inicio"
+
+#: Template/Instances/map.ctp:96 Template/Projects/index.ctp:10
+msgid "Project List"
+msgstr "Lista de Proyectos"
+
+#: Template/Projects/view.ctp:49 Template/Users/view.ctp:159
+msgid "Organization"
+msgstr "Organización"
+
+#: Template/Projects/view.ctp:41
+msgid "User"
+msgstr "Usuario"
+
+#: Template/Projects/view.ctp:45
+msgid "External URL"
+msgstr "URL externa"
+
+#: Template/Projects/view.ctp:53
+msgid "Organization Type"
+msgstr "Tipo de organización"
+
+#: Template/Projects/view.ctp:76
+msgid "City"
+msgstr "Ciudad"
+
+#: Template/Projects/view.ctp:80
+msgid "Latitude"
+msgstr "Latitud"
+
+#: Template/Projects/view.ctp:84
+msgid "Longitude"
+msgstr "Longitud"
+
+#: Template/Users/edit.ctp:10
+msgid "(EDITING)"
+msgstr "(EDITANDO)"
+
+#: Template/Projects/add.ctp:89 Template/Projects/edit.ctp:96
+#: Template/Users/edit.ctp:94 View/Helper/LocHelper.php:14
+msgid "Submit"
+msgstr "Enviar"
+
+#: Template/Projects/index.ctp:38 Template/Users/view.ctp:170
+#: View/Helper/AppHelper.php:105
+msgid "View"
+msgstr "Ver"
+
+#: View/Helper/AppHelper.php:111
+msgid "DELETE"
+msgstr "ELIMINAR"
+
+#: View/Helper/AppHelper.php:113
+msgid ""
+"Are you sure you want to delete the \"{0}\" app?. This operation cannot be "
+"undone. All related data will be erased!"
+msgstr ""
+"¿Está seguro que desea eliminar la aplicación \"{0}\". Esta operación no se "
+"puede revertir. Todos los datos relacionados serán eliminados!!."
+
+#: Controller/UsersController.php:61
+msgid "Invalid username or password, try again"
+msgstr "Nombre de usuario o contraseña inválidos."
+
+#: Controller/UsersController.php:142
+msgid "Passwords must match!"
+msgstr "Las contraseñas no coinciden!"
+
+#: Template/Instances/home.ctp:42
+msgid "Previous App"
+msgstr "App anterior"
+
+#: Template/Instances/home.ctp:45
+msgid "Next App"
+msgstr "App siguiente"
+
+#: Template/Instances/home.ctp:98
+msgid "Current Slide"
+msgstr "App actual"
+
+#: Template/Instances/map.ctp:75
+msgid "New Project"
+msgstr "Nuevo proyecto"
+
+#: Template/Instances/map.ctp:83
+msgid "Graph Visualization"
+msgstr "Ver gráficos"
 
 #: Template/Projects/add.ctp:30 Template/Projects/edit.ctp:34
 #: Template/Projects/view.ctp:36
@@ -459,11 +644,6 @@ msgstr "??????????????????????????????????????????????"
 msgid "Related Categories: "
 msgstr "Categorías relacionadas:"
 
-#: Template/Projects/add.ctp:89 Template/Projects/edit.ctp:96
-#: Template/Users/edit.ctp:94 View/Helper/LocHelper.php:14
-msgid "Submit"
-msgstr "Enviar"
-
 #: Template/Projects/edit.ctp:15 Template/Projects/view.ctp:15
 msgid ""
 "Are you sure you want to delete this project?. This operation cannot be "
@@ -476,42 +656,9 @@ msgstr ""
 msgid "Found: "
 msgstr "Encontrado:"
 
-#: Template/Projects/index.ctp:38 Template/Users/view.ctp:170
-#: View/Helper/AppHelper.php:105
-msgid "View"
-msgstr "Ver"
-
-#: Template/Projects/view.ctp:41
-msgid "User"
-msgstr "Usuario"
-
-#: Template/Projects/view.ctp:45
-msgid "External URL"
-msgstr "URL externa"
-
-#: Template/Projects/view.ctp:49 Template/Users/view.ctp:159
-msgid "Organization"
-msgstr "Organización"
-
-#: Template/Projects/view.ctp:53
-msgid "Organization Type"
-msgstr "Tipo de organización"
-
 #: Template/Projects/view.ctp:72
 msgid "Country"
 msgstr "País"
-
-#: Template/Projects/view.ctp:76
-msgid "City"
-msgstr "Ciudad"
-
-#: Template/Projects/view.ctp:80
-msgid "Latitude"
-msgstr "Latitud"
-
-#: Template/Projects/view.ctp:84
-msgid "Longitude"
-msgstr "Longitud"
 
 #: Template/Projects/view.ctp:92
 msgid "Project Stage"
@@ -536,45 +683,3 @@ msgstr "Fecha de creación:"
 #: Template/Projects/view.ctp:112
 msgid "Last Modified"
 msgstr "Última modificación"
-
-#: Template/Users/edit.ctp:10
-msgid "(EDITING)"
-msgstr "(EDITANDO)"
-
-#: View/Helper/AppHelper.php:111
-msgid "DELETE"
-msgstr "ELIMINAR"
-
-#: View/Helper/AppHelper.php:113
-msgid ""
-"Are you sure you want to delete the \"{0}\" app?. This operation cannot be "
-"undone. All related data will be erased!"
-msgstr ""
-"¿Está seguro que desea eliminar la aplicación \"{0}\". Esta operación no se "
-"puede revertir. Todos los datos relacionados serán eliminados!!."
-
-#: Template/Instances/view.ctp:170
-msgid "Download User List"
-msgstr "Descargar lista de usuarios"
-
-#: Template/Instances/index.ctp:58 Template/Instances/view.ctp:322
-#: Template/Projects/index.ctp:52
-msgid "Page"
-msgstr "Página"
-
-#: Template/Instances/index.ctp:58 Template/Instances/view.ctp:322
-#: Template/Projects/index.ctp:52
-msgid "of"
-msgstr "de"
-
-#: Template/Instances/home.ctp:38
-msgid "Your Apps"
-msgstr "Tus apps"
-
-#: Template/Instances/home.ctp:58
-msgid "You don't have any registered app."
-msgstr "No tienes apps registradas."
-
-#: Template/Layout/error.ctp:20
-msgid "Home"
-msgstr "Inicio"
