--- a/src/Locale/es/dots.pot
+++ b/src/Locale/es/dots.pot
@@ -4,6 +4,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
+"POT-Creation-Date: 2016-10-30 05:42+0000\n"
+"PO-Revision-Date: 2016-10-30 02:53-0300\n"
+"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2016-10-18 05:33+0000\n"
 "PO-Revision-Date: 2016-10-18 02:56-0300\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
@@ -19,29 +28,13 @@ msgstr ""
 msgid "Order By"
 msgstr "Ordenar Por"
 
-#: Template/Instances/dots.ctp:15;36
-msgid "Category"
-msgstr "Categoría"
-
-#: Template/Instances/dots.ctp:16;37;111
-msgid "Organization Type"
-msgstr "Tipo de Organización"
-
-#: Template/Instances/dots.ctp:17;38;160
-msgid "Region"
-msgstr "Continente"
-
-#: Template/Instances/dots.ctp:18;39
-msgid "Genre"
-msgstr "Género"
-
-#: Template/Instances/dots.ctp:19;40
-msgid "Stage"
-msgstr "Etapa"
-
-#: Template/Instances/dots.ctp:32
-msgid "Merge with"
+#: Template/Instances/dots.ctp:27
+msgid "Compare to"
 msgstr "Comparar con"
+
+#: Template/Instances/dots.ctp:67
+msgid "Filters"
+msgstr "Filtros"
 
 #: Template/Instances/dots.ctp:87
 msgid "total projects"
@@ -55,6 +48,10 @@ msgstr "Ver Todos"
 msgid "Filtering Options"
 msgstr "Configuración de filtrado"
 
+#: Template/Instances/dots.ctp:16;37;111
+msgid "Organization Type"
+msgstr "Tipo de Organización"
+
 #: Template/Instances/dots.ctp:124
 msgid "Project Category"
 msgstr "Categoría del proyecto"
@@ -67,6 +64,10 @@ msgstr "Etapa del proyecto"
 msgid "Collaborator Genre"
 msgstr "Género del colaborador"
 
+#: Template/Instances/dots.ctp:17;38;160
+msgid "Region"
+msgstr "Continente"
+
 #: Template/Instances/dots.ctp:172
 msgid "Country"
 msgstr "País"
@@ -78,3 +79,19 @@ msgstr "Limpiar Filtros"
 #: Template/Instances/dots.ctp:182
 msgid "Apply"
 msgstr "Aplicar"
+
+#: Template/Instances/dots.ctp:15;36
+msgid "Category"
+msgstr "Categoría"
+
+#: Template/Instances/dots.ctp:18;39
+msgid "Genre"
+msgstr "Género"
+
+#: Template/Instances/dots.ctp:19;40
+msgid "Stage"
+msgstr "Etapa"
+
+#: Template/Instances/dots.ctp:32
+msgid "Merge with"
+msgstr "Comparar con"
