--- a/src/Locale/es/instances.pot
+++ b/src/Locale/es/instances.pot
@@ -4,6 +4,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
+"POT-Creation-Date: 2016-10-30 05:42+0000\n"
+"PO-Revision-Date: 2016-10-30 02:50-0300\n"
+"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2016-10-09 03:11+0000\n"
 "PO-Revision-Date: 2016-10-18 02:57-0300\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
@@ -127,9 +136,9 @@ msgid "Related Organization Types"
 msgstr "Tipos de Organización relacionados"
 
 #: Template/Instances/view.ctp:165
-msgid "Admins"
-msgstr "Administradores"
-
-#: Template/Instances/view.ctp:165
 msgid "Actions"
 msgstr "Acciones"
+
+#: Template/Instances/view.ctp:165
+msgid "Admins"
+msgstr "Administradores"
