--- a/src/Locale/es/map.pot
+++ b/src/Locale/es/map.pot
@@ -4,6 +4,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
+"POT-Creation-Date: 2016-10-30 05:42+0000\n"
+"PO-Revision-Date: 2016-10-30 02:52-0300\n"
+"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2016-10-18 05:33+0000\n"
 "PO-Revision-Date: 2016-10-18 02:59-0300\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
@@ -26,6 +35,10 @@ msgstr "Alejar"
 #: Template/Instances/map.ctp:35
 msgid "Please select a country"
 msgstr "Por favor, seleccione un país"
+
+#: Template/Instances/map.ctp:43
+msgid "Filters"
+msgstr "Filtros"
 
 #: Template/Instances/map.ctp:44
 msgid "total projects"
